octoprint/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: octoprint
subsets:
- addresses:
  - ip: 192.168.0.22
  ports:
  - name: http
    port: 5000
    protocol: TCP
