octoprint/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: octoprint
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 5000
  type: ClusterIP
